--- a/Exp_2_pandas.ipynb
+++ b/Exp_2_pandas.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Exp 2 pandas.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP8Hzi3nun8AmIFrfDSU4jw",
+      "authorship_tag": "ABX9TyMosNNopzfnvLIBIDWdGGsg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,11 +37,11 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "YBygmJlSfwJf",
+        "id": "vfSdudXlgDBJ",
         "colab_type": "text"
       },
       "source": [
-        "##Importing needed packages"
+        "##1) Create a dataframe manually"
       ]
     },
     {
@@ -59,16 +59,6 @@
       "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "vfSdudXlgDBJ",
-        "colab_type": "text"
-      },
-      "source": [
-        "##1) Create a dataframe manually"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "T-u3t50rgOtg",
@@ -77,14 +67,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 143
         },
-        "outputId": "8793b02b-9a6f-4f86-d053-2767bab79efa"
+        "outputId": "ce01b1ed-9033-4290-ad6f-79273403e24a"
       },
       "source": [
-        "data = {'Roll No':['EEE267','EEE290', 'EEE296'], 'Name':['Navya','Venisha','Praneetha']}\n",
+        "data = {'Roll No':['261','267', '296'], 'Name':['hannah','navya','praneetha']}\n",
         "df = pd.DataFrame(data=data)\n",
         "df"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -115,18 +105,18 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>EEE267</td>\n",
-              "      <td>Navya</td>\n",
+              "      <td>261</td>\n",
+              "      <td>hannah</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>EEE290</td>\n",
-              "      <td>Venisha</td>\n",
+              "      <td>267</td>\n",
+              "      <td>navya</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>EEE296</td>\n",
-              "      <td>Praneetha</td>\n",
+              "      <td>296</td>\n",
+              "      <td>praneetha</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -134,15 +124,15 @@
             ],
             "text/plain": [
               "  Roll No       Name\n",
-              "0  EEE267      Navya\n",
-              "1  EEE290    Venisha\n",
-              "2  EEE296  Praneetha"
+              "0     261     hannah\n",
+              "1     267      navya\n",
+              "2     296  praneetha"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 25
+          "execution_count": 27
         }
       ]
     },
