--- a/Exp_2_pandas.ipynb
+++ b/Exp_2_pandas.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Exp 2 pandas.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOxN8HZFn2UJrc+STsUMTcd",
+      "authorship_tag": "ABX9TyPK5V6rIaV4123mDzJS9BDK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,11 +37,11 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "vfSdudXlgDBJ",
+        "id": "l_reKes-zutL",
         "colab_type": "text"
       },
       "source": [
-        "##1) Create a dataframe manually"
+        "##Importing needed packages"
       ]
     },
     {
@@ -59,6 +59,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "vfSdudXlgDBJ",
+        "colab_type": "text"
+      },
+      "source": [
+        "##1) Create a dataframe manually"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "T-u3t50rgOtg",
@@ -67,14 +77,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 143
         },
-        "outputId": "8616555d-b88b-4f7b-e701-fa2550317fbc"
+        "outputId": "6e785d7b-58d9-4ebe-e3ef-8929a45ac9f3"
       },
       "source": [
-        "data = {'Roll No':['261','267', '296'], 'Name':['hannah','navya','praneetha']}\n",
+        "data = {'Roll No':['EEE267','EEE290', 'EEE296'], 'Name':['Navya','Venisha','Praneetha']}\n",
         "df = pd.DataFrame(data=data)\n",
         "df"
       ],
-      "execution_count": null,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -105,18 +115,18 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>261</td>\n",
-              "      <td>hannah</td>\n",
+              "      <td>EEE267</td>\n",
+              "      <td>Navya</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>267</td>\n",
-              "      <td>navya</td>\n",
+              "      <td>EEE290</td>\n",
+              "      <td>Venisha</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>296</td>\n",
-              "      <td>praneetha</td>\n",
+              "      <td>EEE296</td>\n",
+              "      <td>Praneetha</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -124,15 +134,15 @@
             ],
             "text/plain": [
               "  Roll No       Name\n",
-              "0     261     hannah\n",
-              "1     267      navya\n",
-              "2     296  praneetha"
+              "0  EEE267      Navya\n",
+              "1  EEE290    Venisha\n",
+              "2  EEE296  Praneetha"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 29
+          "execution_count": 30
         }
       ]
     },
